  * Added update check in help menu
  * Added exclusion list to option panel
    * Can be file names or folders (backslash).
	* Anything matched will be ignored
  * Added a treeview pane to see in which files ressources are used in
    * Has some context menus, but some things like multi-select do not work in treeviews, thus the Flat View pane that remains

1.3.2
  * Fixed problems with certain case insensitive searches
  * Made picturebox bigger

1.3.1
  * Added SVG, CSS, JS to default item list
  * Added scss to default files list
  * Made search culture-invariant / case-insensitive
  * Added Visual Studio: Enterprise & Community to supported platform list

1.3
  * Alt-Click in list will show image thumbnail if it's an image
  * Double-Click on list will open & set focus to item in solution explorer (VSIX only)
  * Shell integration (EXE only)
    - Add/Remove from Help menu, or register/unregister from command line with -s t
  * More file stats

1.2
  * Changed UI a bit
  * Context menus
    - Select All
    - Select Other
    - Export Selection
    - Delete Selection
    - Explore Here
    - Verify Existence (VSIX only: launches automated VS file search)
      - In Solution
      - In Project
  * Command line parameters (EXE only)
    -p path
    -r report type
    -f find regexp
    -i inside regexp
  * Help Menu
    - Manual
    - Changelog
    - Website
    - About
    - License
  * More file stats
  * More error handling

1.1
  * Disable delete button if no are files selected
  * Enable searching in website projects (VSIX)
  * More error messages on invalid and/or unsuccessful operations

1.0 (VSIX)
  * .EXE and VSIX versions now share same code-base
  * various modifications to accommodate different behavior in Visual Studio Mode & Standalone Mode
  * Enable searching in application projects

1.0 (EXE)
  * Toggle between used/unused lists
  * Export used/unused lists
  * Delete file(s) with confirmation prompt
  * Save search criteria after search