@@ -18,6 +18,8 @@
 	* Anything matched will be ignored
   * Added a treeview pane to see in which files ressources are used in
     * Has some context menus, but some things like multi-select do not work in treeviews, thus the Flat View pane that remains
+  * Fixed Visual Studio from crashing when double-clicking a file
+    * This was happeneing when "track active item in solution explorer" was already checked in VS options
 
 1.3.2
   * Fixed problems with certain case insensitive searches
